--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+key.json
 .DS_Store
 .idea
 *.tfstate
@@ -14,3 +14,4 @@
 serving_dir
 .ipynb_checkpoints/
 !week_6_stream_processing/avro_example/data/rides.csv
+*.largefile
